HVAC Backup 2/objects/Customer_Follow_Up__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Customer Follow Ups</relationshipLabel>
        <relationshipName>Customer_Follow_Ups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Time__c</fullName>
        <label>Follow Up Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Customer Follow Up</label>
    <nameField>
        <displayFormat>CF-{00000}</displayFormat>
        <label>Customer Follow Up Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Follow Ups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>